goods-management: serve the anonymous customer surface (litemall-wx-api parity)
Add the anonymous, public litemall-wx-api endpoints that belong to the
goods/catalog bounded context, so gateway-api can serve visitors. Each follows
the module's read slice: thin interfaces/rest controller -> application/<area>
query service -> litemall-db service, returning the wx JSON contract. Goods-core
keeps its aggregates; these read-only lists intentionally do not introduce new
aggregates (that would diverge from the contract the SPA consumes).

New endpoints (all anonymous, /srv/**):
- /srv/brand/list,/detail            (BrandQueryService -> LitemallBrandService)
- /srv/issue/list                    (IssueQueryService -> LitemallIssueService)
- /srv/comment/list,/count           (CommentQueryService -> LitemallComment+UserService)
- /srv/topic/list,/detail,/related   (TopicQueryService -> LitemallTopic+GoodsService)
- /srv/search/index,/helper          (SearchKeywordService -> LitemallKeyword+SearchHistoryService)
- /srv/goods/count                   (extend LitemallGoodsController)
- /srv/home/about                    (LitemallHomeController + MallInfoProperties, litemall.mall.*)

Security: svcsecurity is deny-by-default, so add the full customer set to
litemall.svcsecurity.public-paths in application.yml (/srv/goods,brand,issue,
comment,topic,home + existing catalog/search/cjAuth/authenticate/actuator);
/srv/private/admin/** stays ROLE_ADMIN. Config-only; the shared svcsecurity
module is untouched.

Out of scope (gateway-api + order/user/promotion follow-ups): auth, user,
address, cart, order, aftersale, collect/favorites, footprint, feedback, msg,
coupon, groupon, storage-download; the authenticated comment POST and real
userHasCollect/clear-history also belong to user/order.

Verified live (verify profile on :8093, no auth header): every endpoint returns
the {errno,errmsg,data} envelope with real paging totals; see verify/RUNBOOK.md
section 14.

Co-Authored-By: Claude Opus 4