@@ -332,3 +332,127 @@ $ curl -s -H 'Authorization: Bearer <machine-jwt>' -H 'X-User-Id: 1' -H 'X-User-
   gateway re-route lands.
 
 `mvn -o -pl litemall-goods-management -am compile` clean.
+
+## §13 — Redis-staged, DB-backed CJ indexing (re-architecture, 2026-06-16)
+
+**Why.** The CJ path was index-only and fully in-memory: a restart lost the cache and forced a
+re-hit of the 1-request/300s CJ API, and stale CJ docs could never be deleted (nothing recorded what
+was indexed). Per user direction the flow is now layered:
+
+```
+CJ API (paced 1/300s) ─▶ Redis (raw /product/list payloads, TTL'd, survives restart)
+                          └▶ normalize ─▶ litemall_cj_product (DB snapshot, RAW CJ pid PK)  ◀── system of record
+                                          └▶ OCS litemall_index (doc id = "cj_"+pid; DB-sourced; upsert + STALE DELETE)
+```
+
+**Id strategy.** The snapshot keys on the **raw CJ pid (UUID)** so it is usable directly for CJ
+detail fetch and CJ order placement; the `cj_` prefix is applied ONLY when forming the OCS document
+id (`CjProductIndexingService.toDocument`) and stripped on lookup (`CjGoodsDetailService`). The
+unified-search contract (`cj_<pid>` hits alongside numeric local ids, `source=cj_dropshipping`) is
+unchanged, so facets/filters/sort keep working — `ProductDocument` was not touched.
+
+**What changed.**
+- New table `litemall_cj_product` (`litemall-db` V17 + undo U17) + `LitemallCjProduct` entity +
+  hand-written `LitemallCjProductMapper`(.xml) + `LitemallCjProductService` (plain MyBatis,
+  `map-underscore-to-camel-case`). PK = raw CJ pid `varchar(64)`; soft-delete via `deleted`.
+- Redis activated: `RedisConfig` now wires a `JedisConnectionFactory` + `StringRedisTemplate` from
+  `redis.server.*` (profile-overridable; `application-docker.yml` → host `redis`). New `redis` service
+  in `docker-compose.yml` + `verify/docker-compose.verify.yml` (6379, healthcheck).
+- New `CjRawCacheRepository`: raw CJ payloads in Redis (`cj:raw:list:<cat>:<page>`, `cj:raw:categories`,
+  `cj:raw:detail:<pid>`), TTL `spring.cjdropship.redis.raw-ttl-seconds` (6h). `CJProductService`'s
+  in-memory caches were repointed here; `fetchByCategory` now reads-through Redis (cached page → no
+  pace/no API; miss → paced fetch + cache).
+- New `CjSnapshotSyncService` (single home of CJ normalization, relocated out of the indexing service):
+  fetch plan → normalize (English title, retail = wholesale×usdToCny×margin, CJ→local category map,
+  default-stock variant) → `upsert` rows; diff live pids → soft-delete vanished → return removed pids.
+- `CjProductIndexingService.buildDocuments()` is now **DB-sourced** (reads `litemall_cj_product`,
+  maps row → `ProductDocument`, applies `cj_` prefix) — no CJ API call, no normalization.
+- `CjCatalogRefreshTask` (nightly cron) = `syncAll()` → upsert snapshot to OCS → `delete(cj_<pid>)`
+  for removed pids. Stale deletion is no longer deferred.
+- New admin endpoint `POST /srv/private/admin/search/cj-sync` (paced, API-touching snapshot refresh);
+  `POST …/reindex` stays fast/DB-only.
+
+**Verified here.**
+- `mvn -q -o -pl litemall-goods-management -am compile` clean (litemall-db built as dep).
+- `LitemallCjProductMapper.xml` well-formed (`xmllint --noout`).
+- Redis staging proven on the live `ocs` network: `SET cj:raw:list:TESTCAT:1 … EX 60` → `GET` returns
+  the payload, `TTL` = 60 — i.e. the exact key/TTL shape `CjRawCacheRepository` uses.
+- No hardcoded search/redis hosts in Java (only `@Value` defaults, profile-overridable); no SQL fallback.
+
+**Live end-to-end capture PENDING a booted goods-management** (same infra caveats as §11/§12 — DB +
+config-server + machine-token). Runbook once booted (use the `verify` profile + `docker-compose.verify.yml`):
+1. `docker compose -f verify/docker-compose.verify.yml up -d` (now includes `redis`); confirm
+   `docker exec ocsverify_redis redis-cli ping` → `PONG`.
+2. `POST /srv/private/admin/search/cj-sync` → `{upserted, removed}`; confirm raw pages cached
+   (`redis-cli KEYS 'cj:raw:list:*'`) and rows persisted (`SELECT count(*) FROM litemall_cj_product`,
+   spot-check English `title`, retail `price`, JSON `category_ids`).
+3. `POST /srv/private/admin/search/reindex` → `indexed` = local + live CJ rows; CJ docs visible in
+   `litemall_index` with `cj_<pid>` ids and `source=cj_dropshipping`.
+4. `GET /srv/search?q=<term>` → one unified ranked `goodsList` (local + cj_ hits), facets intact.
+5. Stale deletion: soft-delete a row (or drop it upstream) → re-run cj-sync → its `cj_<pid>` leaves
+   `litemall_index` without a full reindex.
+6. Restart goods-management with Redis warm → re-index works with no CJ API call (raw pages served
+   from Redis within TTL).
+
+## §14 — Anonymous customer endpoints (litemall-wx-api parity, 2026-06-16)
+
+**Why.** The customer SPA (gateway-api) needs the *anonymous* litemall-wx-api surface, but only the
+goods/catalog bounded-context slice belongs here. Added the missing wx reads in the module's DDD
+layering (thin `interfaces/rest` controller → `application/<area>` query service → `litemall-db`
+service, returning the wx JSON contract); goods-core/write keeps its aggregates — these read-only
+lists deliberately do not invent aggregates. Other wx contexts (auth/user/address/cart/order/
+aftersale/collect/footprint/feedback/coupon/groupon/msg/storage) are OUT OF SCOPE → gateway-api +
+order/user/promotion follow-ups.
+
+**Security.** svcsecurity is deny-by-default (publicPaths permitAll → adminPaths ROLE_ADMIN → else
+authenticated). Added the full customer set to `litemall.svcsecurity.public-paths` in
+`config/application.yml` (`/srv/goods,brand,issue,comment,topic,home` + the pre-existing
+catalog/search/cjAuth/authenticate/actuator). `/srv/private/admin/**` stays ROLE_ADMIN.
+
+**wx-api → goods-management mapping (all anonymous):**
+
+| wx-api | goods-management | backing |
+|---|---|---|
+| `/wx/brand/list` `/detail` | `/srv/brand/list` `/detail` | `BrandQueryService` → LitemallBrandService |
+| `/wx/issue/list` | `/srv/issue/list` | `IssueQueryService` → LitemallIssueService |
+| `/wx/comment/list` `/count` | `/srv/comment/list` `/count` | `CommentQueryService` → LitemallComment+UserService (post=follow-up) |
+| `/wx/search/index` `/helper` | `/srv/search/index` `/helper` | `SearchKeywordService` → LitemallKeyword+SearchHistoryService |
+| `/wx/topic/list` `/detail` `/related` | `/srv/topic/*` | `TopicQueryService` → LitemallTopic+GoodsService |
+| `/wx/goods/count` | `/srv/goods/count` | LitemallGoodsServiceApi.getGoodsOnSale |
+| `/wx/home/about` | `/srv/home/about` | `MallInfoProperties` (`litemall.mall.*`) |
+| (already present) | `/srv/goods/*` `/srv/catalog/*` `/srv/search`(+suggest) | unchanged |
+
+**Verified LIVE (2026-06-16).** `mvn -q -o -pl litemall-goods-management -am compile` clean. Booted
+the verify-profile exec jar on :8093 against local MySQL + the OCS stack and curled every new endpoint
+**with no auth header** — all returned the `{errno:0,errmsg,data}` envelope:
+```
+GET /srv/goods/count                                    → data: 238
+GET /srv/home/about                                     → {name:litemall, address, phone, qq, lon, lat}
+GET /srv/brand/list?page=1&limit=3                      → {total:49, pages:17, page:1, list:[…brands]}
+GET /srv/brand/detail?id=1001000                        → {id,name,desc,picUrl,floorPrice,…}
+GET /srv/issue/list?page=1&size=2                       → {total:4, pages:2, list:[…FAQ]}
+GET /srv/search/index                                   → {defaultKeyword, historyKeywordList:[], hotKeywordList}
+GET /srv/search/helper?keyword=a                        → []   (no keyword matches)
+GET /srv/topic/list?page=1&limit=2                      → {total:20, pages:10, list:[…topics]}
+GET /srv/topic/detail?id=264                            → {topic:{…}, goods:[…], userHasCollect:0}
+GET /srv/topic/related?id=264                           → {list:[…]}
+GET /srv/comment/count?type=0&valueId=1006002           → {allCount:27, hasPicCount:2}
+GET /srv/comment/list?type=0&valueId=1006002&showType=0 → list of {addTime,content,adminContent,picList,star,userInfo:{nickName,avatarUrl}}
+```
+Paging totals are real (PageHelper-backed). `userHasCollect` is fixed 0 (collect = user context; follow-up).
+
+**Boot notes for a clean standalone run here (pre-existing, NOT from this change).** The verify exec
+jar needs JDK21 with `--add-opens=java.base/{java.io,java.lang,java.util,java.util.concurrent,
+java.util.concurrent.locks}=ALL-UNNAMED`, and the component-scanned legacy litemall-core beans need
+config or they NPE at startup: `--litemall.wx.app-id/app-secret/mch-id/mch-key`,
+`--litemall.notify.mail.enable=false --litemall.notify.sms.enable=false`, and dummy
+`litemall.storage.{aliyun,tencent,qiniu}.*` (StorageAutoConfiguration builds all three providers
+unconditionally). The shared dev DB also has a conflicting **V17** (promotion branch) so Flyway
+validation fails → run with `--spring.flyway.enabled=false` (the customer reads use existing tables,
+not the CJ snapshot). The svcsecurity `public-paths` whitelist is verified by inspection (the verify
+profile permits all, so it does not exercise gating).
+
+**Out-of-scope follow-ups (other bounded contexts).** gateway-api routes + order/user/promotion
+services own: auth, user, address, cart, order, aftersale, collect/favorites, footprint, feedback,
+msg (user/order); coupon, groupon (promotion/order); storage download (cross-cutting). The
+authenticated comment POST and real `userHasCollect`/search-history-clear also belong to user/order.
